@@ -1,6 +1,7 @@
 # Release 2.1
  * Faster startup: Transaction inputs and outputs are parsed once and
    cached in the wallet file.
+ * Transaction window shows own addresses in green color.
  * OpenAlias plugin was improved
  * Various fixes.
 
